test/good/generators/generic06.px

func empty<T>(): T... def
    print
    return
    print
    yield false
    return

print {...empty()}
