test/bad/generics/def12.px

func f<T>(): T def
    return false
    return 0

print f()
